--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+click = "==7.1.2"
+flask = "==1.1.2"
+gunicorn = "==20.0.4"
+itsdangerous = "==1.1.0"
+jinja2 = "==2.11.2"
+markupsafe = "==1.1.1"
+werkzeug = "==1.0.1"
 
 [dev-packages]
 
